# cviator

./: .clangd  .gitignore  CMakeLists.txt  README.md
src/: circle.h  main.c
src/assets/: compute.glsl  fragment.glsl  geometry.glsl  vertex.glsl
src/subsystems/: gpu_compute.h  logger.h  platform.h  renderer.h  state.h
